# reviewgate

./: .gitignore  .reviewgate.yml  .shipcheck.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  action.yml
.github/workflows/: ci.yml  review-gate.yml  reviewgate.yml  shipcheck.yml
action/: README.md
crates/reviewgate-cli/: Cargo.toml
crates/reviewgate-cli/src/: main.rs
crates/reviewgate-core/: Cargo.toml
crates/reviewgate-core/src/: lib.rs
crates/reviewgate-github/: Cargo.toml
crates/reviewgate-github/src/: lib.rs
crates/shipcheck-cli/: Cargo.toml
crates/shipcheck-cli/src/: main.rs
crates/shipcheck-core/: Cargo.toml
crates/shipcheck-core/src/: lib.rs
crates/shipcheck-github/: Cargo.toml
crates/shipcheck-github/src/: lib.rs
docs/: dogfood-2026-06-25.md  evaluation.md  external-agent-workflow.md  release-checklist.md  release-v0.1.0.md  review-ux-control-v1.md  v0-smoke.md
fixtures/: simple-review.json
prompts/: compatibility.md  docs.md  frontend.md  general.md  migrations.md  security.md  testability.md
schemas/: review-output.schema.json  reviewgate-review-output.schema.json  shipcheck-review-output.schema.json
skills/reviewgate-loop/: SKILL.md
skills/shipcheck-loop/: SKILL.md
