[workspace]
members = [
  "crates/reviewgate-core",
  "crates/reviewgate-cli",
  "crates/reviewgate-github",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/LVTD-LLC/review-gate"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
