[workspace]
members = [
  "crates/shipcheck-core",
  "crates/shipcheck-cli",
  "crates/shipcheck-github",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/LVTD-LLC/shipcheck"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.140"
thiserror = "2.0"
