[package]
name = "reviewgate-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "reviewgate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reviewgate-core = { path = "../reviewgate-core" }
serde_json.workspace = true

